code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__auto_drive_input_required_waits.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: frame
---
 +----------------------------------------------------------------------------+
 |                                 Every Code                                 |
 +----------------------------------------------------------------------------+

 • I can help with various tasks including:

   - Writing code
   - Reading files
   - Running commands



  Auto Drive > Input required  ✶ Input required (Xs)
 +----------------------------------------------------------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
  • Agents Enabled  • Diagnostics Enabled                              API key
