code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__auto_drive_review_footer_persists.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: frame
---
 +----------------------------------------------------------------------------+
 |                                    Code                                    |
 +----------------------------------------------------------------------------+

 • I can help with various tasks including:

   - Writing code
   - Reading files
   - Running commands



  Auto Drive > waiting for code review...  ✶ Awaiting review (Xs)
 +----------------------------------------------------------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
 Agents Enabled  •  Diagnostics Enabled                                API key
